<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.motivational.quotes.Activities.SplashActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/id_toolbar_container"
        android:gravity="center"
        android:padding="4dp"
        android:text=""
        android:textColor="#ff0000"
        android:textSize="10dp"
        android:textStyle="italic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="#fff" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/id_toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:elevation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:padding="12dp">

        <android.support.v7.widget.CardView
            android:id="@+id/quote"
            android:layout_width="150dp"
            android:layout_height="260dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@color/white"
            android:elevation="8dp"
            android:foreground="?selectableItemBackground"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/drawable_gradient">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="76dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    app:srcCompat="@drawable/email" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="22dp"
                    android:gravity="center"
                    android:text="@string/share_post"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/story"
            android:layout_width="150dp"
            android:layout_height="260dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/quote"
            android:background="@color/white"
            android:elevation="8dp"
            android:foreground="?selectableItemBackground"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/drawable_gradient">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="76dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    app:srcCompat="@drawable/camera" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="22dp"
                    android:gravity="center"
                    android:text="@string/share_story"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </RelativeLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/share_video"
        android:layout_width="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/share_a_video"
        android:textColor="#fff"
        android:textSize="22sp"
        android:padding="6dp"
        android:textStyle="bold" />

</RelativeLayout>
