<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.motivational.quotes.Activities.EditQuoteActivity">

    <RelativeLayout
        android:id="@+id/fragment_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/canvasHolder"
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <com.motivational.quotes.Utils.DemoImageView
                android:id="@+id/quoteImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <RelativeLayout
                android:id="@+id/over_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.0"
                android:background="@color/black"></RelativeLayout>

            <LinearLayout
                android:id="@+id/view_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_above="@+id/quoteText"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/wolf" />

                <TextView
                    android:id="@+id/quoteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/fredoka_regular"
                    android:gravity="center"
                    android:hint="@string/quote"
                    android:shadowColor="@color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/line"
                    android:layout_width="45dp"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/quoteText"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/brand_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/brand_name"
                    android:textColor="@color/white"
                    android:textSize="10sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/quotesLogoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:background="@drawable/drawable_border"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/instagram" />

                <TextView
                    android:id="@+id/logo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/lato_light"
                    android:gravity="center"
                    android:text="@string/insta_id"
                    android:textColor="@color/white"
                    android:textSize="9sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/relativeFragmentsHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/canvasHolder"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_seekbar_background"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                        android:id="@+id/blur_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/blur_ic"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true">

                        <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
                            android:id="@+id/slider_1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:max="100"
                            android:progressBackgroundTint="#000000"
                            android:progressTint="@color/white"
                            android:splitTrack="false"
                            android:thumbOffset="8dp"
                            android:thumbTint="@color/white"
                            app:seekBarRotation="CW270" />
                    </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>

                    <ImageView
                        android:id="@+id/blur_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        app:srcCompat="@drawable/ic_blur" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="8"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/button_save"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackground"
                            android:src="@drawable/save" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageButton
                                android:id="@+id/button_gallery"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?selectableItemBackground"
                                android:src="@drawable/gallery" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageButton
                                android:id="@+id/button_web"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?selectableItemBackground"
                                android:src="@drawable/web_images" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageButton
                                android:id="@+id/button_tags"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?selectableItemBackground"
                                android:src="@drawable/tags" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageButton
                                android:id="@+id/button_expand"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?selectableItemBackground"
                                android:src="@drawable/expand" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageButton
                                android:id="@+id/button_collapse"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?selectableItemBackground"
                                android:src="@drawable/collapse" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageButton
                                android:id="@+id/button_increase"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?selectableItemBackground"
                                android:src="@drawable/increase" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageButton
                                android:id="@+id/button_decrease"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?selectableItemBackground"
                                android:src="@drawable/decrease" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageButton
                                android:id="@+id/button_shuffle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?selectableItemBackground"
                                app:srcCompat="@drawable/ic_shuffle" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageButton
                                android:id="@+id/button_left"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?selectableItemBackground"
                                app:srcCompat="@drawable/drawable_arrow_back" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageButton
                                android:id="@+id/button_right"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?selectableItemBackground"
                                app:srcCompat="@drawable/ic_arrow_forward" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_seekbar_background"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                        android:id="@+id/brightness_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/brightness_ic"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true">

                        <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
                            android:id="@+id/slider_2"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:max="100"
                            android:progressBackgroundTint="#000000"
                            android:progressTint="@color/white"
                            android:splitTrack="false"
                            android:thumbOffset="8dp"
                            android:thumbTint="@color/white"
                            app:seekBarRotation="CW270" />
                    </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>

                    <ImageView
                        android:id="@+id/brightness_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        app:srcCompat="@drawable/ic_brightness" />

                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
